# chess-eval-scaling

./: .gitignore  ANALYSIS.md  LICENSE  README.md
analysis/: make_plots.py
engine/: CMakeLists.txt
engine/src/: board.cpp  board.h  eval.cpp  eval.h  eval_deep.cpp  eval_deep.h  eval_king.cpp  eval_king.h  judge.h  search.cpp  search.h  uci.cpp
engine/tests/: acc_difftest.cpp  archbench.cpp  evalspeed.cpp  parity.cpp  parity_deep.cpp  parity_king.cpp  perft.cpp  searchbench.cpp
models/: README.md  compact_champion.qbin  compact_small.qbin  compact_tiny.qbin
scripts/: build.sh  play.sh
training/: README.md  arch_experiment.py  build_dataset.py  deepmodel.py  encode.py  make_parity.py  make_parity_deep.py  model.py  quantize.py  quantize_deep.py  requirements.txt  target.py  train.py  train_deep.py
